--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -61,6 +61,35 @@
           }
 }
 
+@keyframes favori_vide {
+        0% {
+                opacity: 100%;    
+        }
+        30% {
+                opacity: 0%;
+                color: white;
+        }
+        100% {
+                opacity: 0%;
+                color: white;
+                display: none;
+        }
+}
+
+@keyframes favori_plein {
+        0% {
+                opacity: 0%; 
+                display: flex;   
+        }
+        50% {
+                opacity: 100%;
+        }
+        100% {
+                opacity: 100%;
+                display: flex;
+        }
+}
+
 @keyframes cascade {
           0% {
                     opacity: 0%;
@@ -78,17 +107,19 @@
 }
 
 @keyframes checked {
-          0% {
-                    margin-right: 0px;
-                    
-                    transform: rotateZ(0deg);
-          }
+        0% {
+                display: block;    
+                opacity: 0%;
+                transform: rotateZ(0deg);
+        }
+        30% {
+                opacity: 100%;
+        }
 
-          100% {
-                    margin-right: 10px;
-                    
-                    transform: rotateZ(360deg);
-          }
+        100% {
+                opacity: 100%;
+                transform: rotateZ(360deg);
+        }
 }
 
 
